--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "03-react-movies",
+  "name": "04-react-query",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "axios": "^1.11.0",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-paginate": "^8.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
